--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -20,11 +20,13 @@
         </div>
         <div class="navbar-collapse">
             <ul class="nav-links">
-                <li class="active"><a href="#"><i class="fas fa-home"></i> Dashboard</a></li>
+                <li class="nav-item"><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#"><i class="fas fa-plus-circle"></i> Add Plant</a></li>
                 <li><a href="#"><i class="fas fa-project-diagram"></i> Layout Planner</a></li>
                 <li><a href="#"><i class="fas fa-book"></i> Journal</a></li>
-                <li><a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                <li class="nav-item"><a href="../pages/login.html"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                <li class="nav-item"><a href="../pages/register.html"><i class="fas fa-user-plus"></i> Register</a></li>
+                <!-- <li><a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a></li> -->
             </ul>
         </div>
     </nav>
