--- a/pages/login.html
+++ b/pages/login.html
@@ -21,8 +21,8 @@
         <div class="navbar-collapse">
             <ul class="nav-links">
                 <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="register.html"><i class="fas fa-user-plus"></i> Register</a></li>
-                <li class="active"><a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                <li><a href="./register.html"><i class="fas fa-user-plus"></i> Register</a></li>
+                <li class="active"><a href="./login.html"><i class="fas fa-sign-in-alt"></i> Login</a></li>
             </ul>
         </div>
     </nav>
@@ -66,7 +66,7 @@
                 <button type="submit" class="btn-auth">Login</button>
                 
                 <div class="auth-footer">
-                    <p>Don't have an account? <a href="register.html">Register here</a></p>
+                    <p>Don't have an account? <a href="./register.html">Register here</a></p>
                 </div>
             </form>
             
