--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Gardening Planner</title>
   <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="../css/dashboard.css">
-    <link rel="stylesheet" href="../css/auth.css">
+  <link rel="stylesheet" href="./css/dashboard.css">
+    <link rel="stylesheet" href="./css/auth.css">
 </head>
 <body>
   <!-- This div will load dashboard content -->
